# bluetti-sdk

./: .gitignore  .pre-commit-config.yaml  AGENT_A_REPORT.md  AGENT_B_REPORT.md  AGENT_C_REPORT.md  AGENT_D_REPORT.md  AGENT_E_REPORT.md  AGENT_F_REPORT.md  AGENT_G_CHECKLIST.md  AGENT_G_EXECUTIVE_SUMMARY.txt  AGENT_G_INDEX.md  AGENT_G_REPORT.md  AGENT_G_SUMMARY.md  CHANGELOG.md  CONTRIBUTING.md  HomeAssistant.txt  LICENSE  MULTI_AGENT_SPRINT_FINAL_REPORT.md  README.md  SMALI_EVIDENCE_REPORT.md  pyproject.toml  setup.py  union.py
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  quality.yml
bluetti_sdk/: __init__.py  __main__.py  cli.py  client.py  client_async.py  constants.py  errors.py
bluetti_sdk/client_services/: __init__.py  group_reader.py
bluetti_sdk/contracts/: __init__.py  client.py  device.py  parser.py  protocol.py  transport.py
bluetti_sdk/devices/: types.py
bluetti_sdk/models/: __init__.py  device.py  profiles.py  types.py
bluetti_sdk/protocol/: __init__.py  modbus.py
bluetti_sdk/schemas/: __init__.py  block_100.py  block_100_declarative.py  block_11000_declarative.py  block_1100_declarative.py  block_12002_declarative.py  block_12161_declarative.py  block_1300.py  block_1300_declarative.py  block_1400_declarative.py  block_14500_declarative.py  block_14700_declarative.py  block_1500_declarative.py  block_15500_declarative.py  block_15600_declarative.py  block_15700_declarative.py  block_15750_declarative.py  block_17000_declarative.py  block_1700_declarative.py  block_17100_declarative.py  block_17400_declarative.py  block_18000_declarative.py  block_18300_declarative.py  block_18400_declarative.py  block_18500_declarative.py  block_18600_declarative.py  block_19000_declarative.py  block_19100_declarative.py  block_19200_declarative.py  block_19300_declarative.py  block_19305_declarative.py  block_19365_declarative.py  block_19425_declarative.py  block_19485_declarative.py  block_2000_declarative.py  block_2200_declarative.py  block_2400_declarative.py  block_26001_declarative.py  block_29770_declarative.py  block_29772_declarative.py  (+11 more)
bluetti_sdk/transport/: __init__.py  base.py  mqtt.py
bluetti_sdk/utils/: __init__.py  resilience.py
docs/adr/: ADR-001-dual-async-sync-api.md  ADR-002-instance-scoped-schema-registry.md  ADR-003-tls-certificate-lifecycle.md  ADR-004-typed-transforms.md  IMPLEMENTATION-PLAN.md  README.md
docs/architecture/: layer_contracts.md  overview.md  summary_days_3_4.md  v2_parser_spec.md
docs/blocks/: ADDITIONAL_BLOCKS.md  BLOCK_100_APP_HOME_DATA.md  BLOCK_100_EXTRACTION_COMPLETE.md  BLOCK_100_QUICK_REFERENCE.md  BLOCK_100_SUMMARY.txt  BLOCK_100_VISUAL_MAP.txt  BLOCK_1100_INV_BASE_INFO.md  BLOCK_1300_INV_GRID_INFO.md  BLOCK_1300_VISUAL_MAP.md  BLOCK_1400_INV_LOAD_INFO.md  BLOCK_1500_INV_INV_INFO.md  BLOCK_6000_PACK_MAIN_INFO.md  BLOCK_6100_PACK_ITEM_INFO.md  BLOCK_6300_PACK_BMU_READ.md  INV_BLOCKS_INDEX.md  INV_BLOCKS_SUMMARY.md  PACK_BLOCKS_QUICK_REFERENCE.md  PACK_DATA_FLOW_DIAGRAM.md  README.md  README_PACK_BLOCKS.md  REVERSE_ENGINEERING_SUMMARY.md  TIMER_BLOCKS.md  V2_BLOCKS_INDEX.md  block_100_parser_example.py
docs/guides/: mqtt_setup.md
docs/plans/: ASYNC-NATIVE-ROADMAP.md  PHASE2-SCHEMA-COVERAGE-MATRIX.md  PLATFORM-STABLE-PLAN.md  PROTOCOL-DRIFT-SAFEGUARDS.md  WAVEC-RE-BACKLOG.md
docs/platform/: API-CONTRACTS.md  BASELINE.md  PLATFORM-STABLE-REPORT.md
docs/re/: 15600-DEVICE-VALIDATION.md  15600-EVIDENCE.md  15600-EXPANDED-EVIDENCE-VERDICT.md  15600-FORENSIC-REPORT.md  15600-SCALE-HUNT-A1-A2.md  17400-EVIDENCE.md  17400-STRUCTURAL-REPORT.md  CROSSCHECK-AUDIT-15600-17400.md  EXTERNAL-DIFF-15600-17400.md  EXTERNAL-EVIDENCE-TOP3.md  FINAL_3_PARTIAL_BLOCKS_CLOSURE_REPORT.md  FINAL_PARTIAL_CLOSURE_REPORT.md  NESTED-SCHEMA-FRAMEWORK.md  PHASE2_DEEP_DIVE_FINAL_REPORT.md
docs/release/: GO-LIVE-CHECKLIST.md
docs/runtime/: DSL-SPEC.md  MIGRATION-GUIDE.md
examples/: basic_usage.py  devices.yaml  runtime.yaml
power_sdk/: __init__.py  __main__.py  bootstrap.py  cli.py  client.py  client_async.py  constants.py  errors.py
power_sdk/client_services/: __init__.py  group_reader.py
power_sdk/contracts/: __init__.py  client.py  device.py  parser.py  protocol.py  schema.py  transport.py  types.py
power_sdk/contrib/: __init__.py  bluetti.py
power_sdk/devices/: types.py
power_sdk/models/: __init__.py  device.py  types.py
power_sdk/plugins/: __init__.py  manifest.py  registry.py
power_sdk/protocol/: __init__.py  factory.py  layer.py  modbus.py
power_sdk/runtime/: __init__.py  bridge.py  config.py  device.py  factory.py  loop.py  push.py  registry.py  sink.py  sink_factory.py  spec.py
power_sdk/schemas/: __init__.py  block_1400_declarative.py  block_14500_declarative.py  block_15500_declarative.py  block_15700_declarative.py  block_15750_declarative.py  block_17000_declarative.py  block_17400_declarative.py  block_18000_declarative.py  block_18600_declarative.py  block_19305_declarative.py  block_19425_declarative.py  block_19485_declarative.py  block_2000_declarative.py  block_2200_declarative.py  block_29770_declarative.py  block_3500_declarative.py  block_3600_declarative.py  block_40127_declarative.py  block_7000_declarative.py  block_720_declarative.py  registry.py
power_sdk/transport/: __init__.py  factory.py  mqtt.py
power_sdk/utils/: __init__.py  resilience.py
tests/: __init__.py  conftest.py  helpers.py
tests/conformance/: test_parser_conformance.py  test_plugin_manifest_conformance.py  test_transport_conformance.py
tests/integration/: test_mqtt_block_1300.py  test_v2_integration.py
tests/unit/: test_block_17400_nested.py  test_bootstrap.py  test_capability_gates.py  test_cli.py  test_client.py  test_client_async.py  test_client_async_concurrency.py  test_constants.py  test_declarative_block_100.py  test_declarative_block_1100.py  test_declarative_block_1300.py  test_declarative_block_1400.py  test_declarative_block_1500.py  test_declarative_block_6000.py  test_declarative_block_6100.py  test_declarative_schema.py  (+44 more)
tools/: README.md
(+100 files in other folders)
