[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "bluetti-sdk"
version = "2.0.0"
description = "Official Python SDK for Bluetti Elite V2 power stations"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Zeus Fabric Team"}
]
keywords = ["bluetti", "power-station", "mqtt", "home-assistant", "iot"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Home Automation",
    "Topic :: System :: Hardware",
]

dependencies = [
    "paho-mqtt>=1.6.0",
    "cryptography>=3.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
    "pytest-asyncio>=0.20",
    "ruff>=0.6.9",
    "mypy>=1.11.2",
    "pre-commit>=3.8.0",
]

[project.urls]
Homepage = "https://github.com/vlad-zeus/bluetti-sdk"
Documentation = "https://bluetti-sdk.readthedocs.io"
Repository = "https://github.com/vlad-zeus/bluetti-sdk"
Changelog = "https://github.com/vlad-zeus/bluetti-sdk/blob/main/CHANGELOG.md"

[project.scripts]
bluetti-cli = "bluetti_sdk.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=bluetti_sdk --cov-report=term-missing -p no:cacheprovider"

[tool.ruff]
line-length = 88
target-version = "py38"
src = ["bluetti_sdk", "tests", "examples"]
exclude = ["build", "dist"]

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "B",
    "UP",
    "SIM",
    "PIE",
    "RUF",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
no_implicit_optional = true
disallow_untyped_defs = true
check_untyped_defs = true
disallow_any_generics = true
pretty = true
ignore_missing_imports = true
follow_imports = "skip"
