[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "power-sdk"
version = "2.1.0"
description = "Protocol-agnostic device control SDK"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Zeus Fabric Team"}
]
keywords = ["power", "device-control", "mqtt", "home-assistant", "iot"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Home Automation",
    "Topic :: System :: Hardware",
]

dependencies = [
    "paho-mqtt>=1.6.0",
    "cryptography>=3.4",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
    "pytest-asyncio>=0.20",
    "ruff>=0.6.9",
    "mypy>=1.11.2",
    "pre-commit>=3.8.0",
]

[project.urls]
Homepage = "https://github.com/vlad-zeus/power-sdk"
Documentation = "https://power-sdk.readthedocs.io"
Repository = "https://github.com/vlad-zeus/power-sdk"
Changelog = "https://github.com/vlad-zeus/power-sdk/blob/main/CHANGELOG.md"

[project.scripts]
power-cli = "power_sdk.cli:main"

[project.entry-points."power_sdk.plugins"]
"bluetti/v2" = "power_sdk.plugins.bluetti.v2.manifest_instance:BLUETTI_V2_MANIFEST"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=power_sdk --cov-report=term-missing -p no:cacheprovider"
asyncio_mode = "strict"

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["power_sdk", "tests", "examples"]
exclude = ["build", "dist"]

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "B",
    "UP",
    "SIM",
    "PIE",
    "RUF",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
no_implicit_optional = true
disallow_untyped_defs = true
check_untyped_defs = true
disallow_any_generics = true
pretty = true
ignore_missing_imports = true
follow_imports = "normal"

[[tool.mypy.overrides]]
module = ["yaml"]
ignore_missing_imports = true
